Got FLEX and BISON building properly with CMake  On branch master  Your branch is ahead of 'origin/master' by 5 commits.    (use "git push" to publish your local commits)
 Changes to be committed:
	modified:   ../src/CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,12 +4,23 @@ project (Verilog-Parser-Src)
 find_package(BISON)
 find_package(FLEX)
 
+BISON_TARGET(VerilogParser 
+             verilog_parser.yy
+             ${CMAKE_CURRENT_BINARY_DIR}/verilog_parser.tab.cc
+             COMPILE_FLAGS "-d"
+)
+
+FLEX_TARGET (VerilogScanner
+             verilog_scanner.l
+             ${CMAKE_CURRENT_BINARY_DIR}/verilog_lexer.yy.cc
+)
+
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_executable(verilog-parser
                verilog_parser.tab.cc 
-               verilog_lexer.yy.c 
+               verilog_lexer.yy.cc
                verilog_driver.cpp 
                main.cpp
 )
