Have the proper testing framework working now! :)
100% failure rate...

 On branch master
 Your branch is up-to-date with 'origin/master'.

 Changes to be committed:
	modified:   ../CMakeLists.txt
	modified:   ../bin/download-tests.sh
	modified:   ../bin/project.sh
	modified:   ../src/main.cpp
	modified:   ../src/verilog_driver.cpp
	modified:   ../src/verilog_driver.hpp
	modified:   ../tests/CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required (VERSION 2.6)
 project (Verilog-Parser)
 
-add_subdirectory(tests)
+enable_testing()
+
 add_subdirectory(src)
+add_subdirectory(tests)
