Started re-write with separate tests for lexer and parser. First to get the lexer working properly...  On branch master  Your branch is ahead of 'origin/master' by 1 commit.    (use "git push" to publish your local commits)
 Changes to be committed:
	modified:   src/CMakeLists.txt
	new file:   src/main-lex.cpp
	modified:   src/verilog_parser.yy
	modified:   src/verilog_scanner.hpp
	modified:   src/verilog_scanner.l
	modified:   tests/CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,3 +25,9 @@ add_executable(verilog-parser
                main.cpp
 )
 
+add_executable(verilog-lexer
+               verilog_parser.tab.cc 
+               verilog_lexer.yy.cc
+               verilog_driver.cpp 
+               main-lex.cpp
+)
