--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,8 +8,12 @@ file(GLOB TESTS_SRC
 foreach(TEST_PATH ${TESTS_SRC})
 
     get_filename_component(TEST_NAME ${TEST_PATH} NAME_WE)
-    add_test(NAME ${TEST_NAME} 
+    
+    add_test(NAME parse_${TEST_NAME} 
              COMMAND verilog-parser ${TEST_PATH})
+    
+    add_test(NAME lex_${TEST_NAME} 
+             COMMAND verilog-lexer ${TEST_PATH})
     
     message("Added test: ${TEST_NAME}")
 
