Fixes for parsing primitives. Primitives tests now pass.  On branch master  Your branch is up-to-date with 'github/master'.
 Changes to be committed:
	modified:   ../src/CMakeLists.txt
	modified:   ../src/verilog_parser.yy

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package(FLEX)
 BISON_TARGET(VerilogParser 
              verilog_parser.yy
              ${CMAKE_CURRENT_BINARY_DIR}/verilog_parser.tab.cc
-             COMPILE_FLAGS "-d"
+             COMPILE_FLAGS "-d --graph"
 )
 
 FLEX_TARGET (VerilogScanner
