Travis config add attempt #2  On branch master  Your branch is up-to-date with 'github/master'.
 Changes to be committed:
	modified:   .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ os:
 
 install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq cmake bison flex build-essential make get-deps
+ - sudo apt-get install -qq cmake bison flex build-essential
 
 before_script:
  - bin/project.sh
