--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,14 @@ os:
 
 install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq cmake bison flex build-essential
+ - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.xz
+ - tar -xvzf bison-3.0.4.tar.gz
+ - cd bison-3.0.4.tar.gz
+ - ./configure --prefix=/usr/local/bison
+ - sudo make install
+ - sudo ln -s /usr/local/bison/bin/bison /usr/bin/bison
+ - sudo apt-get install -qq cmake flex build-essential
+ - cd
 
 before_script:
  - bin/project.sh
