--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,12 @@ os:
 
 install:
  - sudo apt-get update -qq
- - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.xz
- - tar -xvzf bison-3.0.4.tar.xz
- - cd bison-3.0.4.tar.gz
- - ./configure --prefix=/usr/local/bison
+ - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
+ - tar -xvzf bison-3.0.4.tar.gz
+ - cd bison-3.0.4
+ - ./configure --prefix=/usr/local/bison --with-libiconv-prefix=/usr/local/libiconv/
+ - make
  - sudo make install
- - sudo ln -s /usr/local/bison/bin/bison /usr/bin/bison
  - sudo apt-get install -qq cmake flex build-essential
  - cd
 
