--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,9 @@ os:
 
 install:
  - sudo apt-get update -qq
- - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
- - tar -xvzf bison-3.0.4.tar.gz
- - cd bison-3.0.4
- - ./configure --prefix=/usr/local/bison --with-libiconv-prefix=/usr/local/libiconv/
- - make
- - sudo make install
+ - wget http://mirrors.kernel.org/ubuntu/pool/main/b/bison/bison_3.0.4.dfsg-1_amd64.deb
+ - dpkg -i bison_3.0.4.dfsg-1_amd64.deb
  - sudo apt-get install -qq cmake flex build-essential
- - cd -
 
 before_script:
  - bin/project.sh
