--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ os:
 
 install:
  - sudo apt-get update -qq
+ - sudo apt-get install -qq cmake flex build-essential libbison-dev=2:3.0.4.dfsg-1
  - wget http://mirrors.kernel.org/ubuntu/pool/main/b/bison/bison_3.0.4.dfsg-1_amd64.deb
  - sudo dpkg -i bison_3.0.4.dfsg-1_amd64.deb
- - sudo apt-get install -qq cmake flex build-essential
 
 before_script:
  - bin/project.sh
