--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,10 @@ os:
 
 install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq cmake flex build-essential libbison-dev=2:3.0.4.dfsg-1
+ - sudo apt-get install -qq cmake flex build-essential 
  - wget http://mirrors.kernel.org/ubuntu/pool/main/b/bison/bison_3.0.4.dfsg-1_amd64.deb
+ - wget http://ftp.us.debian.org/debian/pool/main/b/bison/libbison-dev_3.0.4.dfsg-1_amd64.deb
+ - sudo dpkg -i libbison-dev_3.0.4.dfsg-1_amd64.deb
  - sudo dpkg -i bison_3.0.4.dfsg-1_amd64.deb
 
 before_script:
