Add library to the CMake System.  On branch master  Your branch is up-to-date with 'github/master'.
 Changes to be committed:
	modified:   ../src/CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,3 +31,9 @@ add_executable(verilog-lexer
                verilog_driver.cpp 
                main-lex.cpp
 )
+
+add_library(verilogparser
+            verilog_parser.tab.cc 
+            verilog_lexer.yy.cc
+            verilog_driver.cpp 
+) 
