Split into C and C++ builds and source files. Need to find a way of making the grammar and tokens common.  On branch master  Your branch is ahead of 'github/master' by 1 commit.    (use "git push" to publish your local commits)
 Changes to be committed:
	modified:   src/CMakeLists.txt
	new file:   src/verilog_parser.y
	modified:   src/verilog_scanner.l
	renamed:    src/verilog_scanner.l -> src/verilog_scanner.ll

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,35 +4,51 @@ project (Verilog-Parser-Src)
 find_package(BISON)
 find_package(FLEX)
 
-BISON_TARGET(VerilogParser 
+BISON_TARGET(VerilogParserC
+             verilog_parser.y
+             ${CMAKE_CURRENT_BINARY_DIR}/verilog_parser.tab.c
+             COMPILE_FLAGS "-d --graph"
+)
+
+FLEX_TARGET (VerilogScannerC
+             verilog_scanner.l
+             ${CMAKE_CURRENT_BINARY_DIR}/verilog_lexer.y.c
+)
+
+BISON_TARGET(VerilogParserCPP
              verilog_parser.yy
              ${CMAKE_CURRENT_BINARY_DIR}/verilog_parser.tab.cc
              COMPILE_FLAGS "-d --graph"
 )
 
-FLEX_TARGET (VerilogScanner
-             verilog_scanner.l
+FLEX_TARGET (VerilogScannerCPP
+             verilog_scanner.ll
              ${CMAKE_CURRENT_BINARY_DIR}/verilog_lexer.yy.cc
 )
 
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-add_executable(verilog-parser
+add_executable(verilog-parser-cpp
                verilog_parser.tab.cc 
                verilog_lexer.yy.cc
                verilog_driver.cpp 
                main-parse.cpp
 )
 
-add_executable(verilog-lexer
+add_executable(verilog-lexer-cpp
                verilog_parser.tab.cc 
                verilog_lexer.yy.cc
                verilog_driver.cpp 
                main-lex.cpp
 )
 
-add_library(verilogparser
+add_library(verilogparserc
+            verilog_parser.tab.c
+            verilog_lexer.y.c
+) 
+
+add_library(verilogparsercpp
             verilog_parser.tab.cc 
             verilog_lexer.yy.cc
             verilog_driver.cpp 
