Got both C and CPP executables running and passing tests.  On branch master  Your branch is ahead of 'github/master' by 2 commits.    (use "git push" to publish your local commits)
 Changes to be committed:
	modified:   src/CMakeLists.txt
	new file:   src/main.c
	modified:   src/verilog_parser.y
	modified:   tests/CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,3 +53,9 @@ add_library(verilogparsercpp
             verilog_lexer.yy.cc
             verilog_driver.cpp 
 ) 
+
+add_executable(verilog-parser-c
+               verilog_parser.tab.c
+               verilog_lexer.y.c
+               main.c
+)
