Created a nice C interface.  On branch master  Your branch is up-to-date with 'github/master'.
 Changes to be committed:
	modified:   src/CMakeLists.txt
	modified:   src/main.c
	new file:   src/verilog_parser.c
	new file:   src/verilog_parser.h

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,6 +46,7 @@ add_executable(verilog-lexer-cpp
 add_library(verilogparserc
             verilog_parser.tab.c
             verilog_lexer.y.c
+            verilog_parser.c
 ) 
 
 add_library(verilogparsercpp
@@ -57,5 +58,6 @@ add_library(verilogparsercpp
 add_executable(verilog-parser-c
                verilog_parser.tab.c
                verilog_lexer.y.c
+               verilog_parser.c
                main.c
 )
