[Dangerous Commit] - Please read notes.
- Everything still works. All tests pass, the build is not broken.
- I am part way through implementing both the function call AST Nodes
  and the ast linked lists.
- This commit is a known safe fallback, lest it all got tits up.
 On branch master
 Your branch is up-to-date with 'github/master'.

 Changes to be committed:
	modified:   ../src/CMakeLists.txt
	modified:   ../src/verilog_ast.c
	modified:   ../src/verilog_ast.h
	new file:   ../src/verilog_ast_common.c
	new file:   ../src/verilog_ast_common.h
	modified:   ../src/verilog_parser.y

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -59,6 +59,7 @@ add_library(verilogparserc
             verilog_lexer.y.c
             verilog_parser.c
             verilog_ast.c
+            verilog_ast_common.c
 ) 
 
 # C library test exectuable
