--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ os:
 
 install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq cmake flex build-essential doxygen
+ - sudo apt-get install -qq cmake flex build-essential
  - wget http://mirrors.kernel.org/ubuntu/pool/main/b/bison/bison_3.0.4.dfsg-1_amd64.deb
  - wget http://ftp.us.debian.org/debian/pool/main/b/bison/libbison-dev_3.0.4.dfsg-1_amd64.deb
  - sudo dpkg -i libbison-dev_3.0.4.dfsg-1_amd64.deb
@@ -25,7 +25,6 @@ script:
 
 after_script:
  - make test
- - make docs
 
 after_failure:
  - echo "Failure"
