Moved to a pure Makefile based build system. Removes CMake dependency.  On branch master  Your branch is ahead of 'github/master' by 6 commits.    (use "git push" to publish your local commits)
 Changes to be committed:
	modified:   .travis.yml
	deleted:    CMakeLists.txt
	new file:   Makefile
	modified:   README.md
	modified:   bin/download-tests.sh
	modified:   bin/project.sh
	deleted:    docs/CMakeLists.txt
	modified:   docs/Doxyfile
	new file:   docs/Makefile
	deleted:    src/CMakeLists.txt
	deleted:    tests/CMakeLists.txt

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,25 +3,23 @@ language:
 
 compiler:
  - gcc
- - clang
 
 os:
  - linux
 
 install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq cmake flex build-essential
+ - sudo apt-get install -qq flex build-essential
  - wget http://mirrors.kernel.org/ubuntu/pool/main/b/bison/bison_3.0.4.dfsg-1_amd64.deb
  - wget http://ftp.us.debian.org/debian/pool/main/b/bison/libbison-dev_3.0.4.dfsg-1_amd64.deb
  - sudo dpkg -i libbison-dev_3.0.4.dfsg-1_amd64.deb
  - sudo dpkg -i bison_3.0.4.dfsg-1_amd64.deb
 
 before_script:
- - bin/project.sh
+ - make setup
 
 script:
- - cd build
- - make
+ - make all
 
 after_script:
  - make test
