Integrated documentation building into cmake  On branch buildsystem/cmake  Changes to be committed: 	modified:   ../docs/CMakeLists.txt

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -4,8 +4,8 @@ project(verilog-parser-docs)
 
 find_package(Doxygen)
 if(DOXYGEN_FOUND)
-    add_custom_target(doc
-        ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
+    add_custom_target(docs
+        ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         COMMENT "Generating API documentation with Doxygen" VERBATIM
     )
