Added custom target to run tests framework.  On branch buildsystem/cmake  Changes to be committed: 	modified:   ../.travis.yml 	modified:   ../CMakeLists.txt 	modified:   ../bin/run-tests.sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,11 @@ install:
  - sudo pip install cpp-coveralls
 
 before_script:
- - make setup
+ - ./bin/project.sh
 
 script:
+ - cd build
+ - make parser
  - make test
 
 after_success:
