--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,12 @@ project(verilog-parser)
 
 add_subdirectory(./src)
 add_subdirectory(./docs)
+
+
+add_custom_target(test
+    COMMAND ./bin/run-tests.sh
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    DEPENDS ${EXECUTABLE_NAME}
+    COMMENT "Running Test Suite"
+    VERBATIM
+)
