--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
 
 after_success:
  - make coverage-report
- - echo "coveralls -b build/ -e build/bin -e build/lib -i build/coverage -i build/gen -i src/ --gcov-options \"-f -b -c\""
+ - coveralls --gcov-options "-f -b -c"
 
 after_failure:
  - echo "Failure"
