--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
 
 after_success:
  - make coverage-report
- - coveralls --gcov-options "-f -b -c"
+ - bash <(curl -s https://codecov.io/bash)
 
 after_failure:
  - echo "Failure"
