--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ script:
 
 after_success:
  - make coverage-report
+ - cd ./src/CMakeFiles/verilogparser.dir/
  - bash <(curl -s https://codecov.io/bash)
 
 after_failure:
