--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
  - make test
 
 after_success:
- - make coverage-report
+ - make coverage-report &> coverage-report-log.txt
  - cd ./src/CMakeFiles/verilogparser.dir/
  - bash <(curl -s https://codecov.io/bash)
 
