--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,9 @@ script:
  - make test
 
 after_success:
+ - cd ./build/debug/
  - make coverage-report &> coverage-report-log.txt
- - bash <(curl -s https://codecov.io/bash)
+ - bash <(curl -s https://codecov.io/bash) -X gcov
 
 after_failure:
  - echo "Failure"
