Added utiltiy function which matches module instance names to their declarations.  On branch master  Your branch is ahead of 'origin/master' by 1 commit.    (use "git push" to publish your local commits)
 Changes to be committed:
	modified:   src/CMakeLists.txt
	modified:   src/main.c
	modified:   src/verilog_ast.c
	modified:   src/verilog_ast.h
	new file:   src/verilog_ast_util.c
	new file:   src/verilog_ast_util.h
	modified:   src/verilog_scanner.l

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,6 +55,7 @@ INCLUDE_DIRECTORIES(${SOURCE_DIR})
 set(PARSER_LIB_SRC ${BINARY_DIR}/${FLEX_OUTPUT}
                    ${BINARY_DIR}/${BISON_OUTPUT}
                    ${SOURCE_DIR}/verilog_ast.c
+                   ${SOURCE_DIR}/verilog_ast_util.c
                    ${SOURCE_DIR}/verilog_ast_common.c
                    ${SOURCE_DIR}/verilog_parser_wrapper.c
                    ${SOURCE_DIR}/verilog_preprocessor.c
