Small build system changes - add info messages for build flags.  On branch master  Your branch is up-to-date with 'origin/master'.
 Changes to be committed:
	modified:   ../../src/CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,11 +19,18 @@ set(FLEX_OUTPUT verilog_scanner.c)
 set(BISON_INPUT  verilog_parser.y)
 set(BISON_OUTPUT verilog_parser.tab.c)
 
-SET(CMAKE_C_FLAGS_DEBUG "-g -O0 -Wall -W -fprofile-arcs -ftest-coverage")
-SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "-fprofile-arcs -ftest-coverage")
+SET(CMAKE_C_FLAGS_DEBUG 
+    "${CMAKE_C_FLAGS_DEBUG} -O0 -Wall -W")
+SET(CMAKE_EXE_LINKER_FLAGS_DEBUG 
+    "${CMAKE_C_FLAGS_RELEASE}")
 
 SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}")
 SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE}")
+
+message(STATUS "Parser Build Flags Debug:   ${CMAKE_C_FLAGS_DEBUG}")
+message(STATUS "Parser Link Flags Debug:   ${CMAKE_EXE_LINKER_FLAGS_DEBUG}")
+message(STATUS "Parser Build Flags Release: ${CMAKE_C_FLAGS_RELEASE}")
+message(STATUS "Parser Link Flags Release: ${CMAKE_EXE_LINKER_FLAGS_RELEASE}")
 
 # ------------------------------------------------------------------------
 
