Add version checks for flex and bison.  On branch master  Your branch is ahead of 'origin/master' by 2 commits.    (use "git push" to publish your local commits)
 Changes to be committed:
	modified:   ../../scratchpad.md
	modified:   ../../src/CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,8 +7,8 @@ message(STATUS "Build Type: ${CMAKE_BUILD_TYPE}")
 set(LIBRARY_NAME    verilogparser)
 set(EXECUTABLE_NAME parser)
 
-FIND_PACKAGE(BISON REQUIRED)
-FIND_PACKAGE(FLEX REQUIRED)
+FIND_PACKAGE(BISON 3.0.4 REQUIRED)
+FIND_PACKAGE(FLEX 2.6 REQUIRED)
 
 set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set(BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
