Adding top-level "master" make file and CTest integration  On branch master  Your branch is ahead of 'origin/master' by 1 commit.    (use "git push" to publish your local commits)
 Changes to be committed:
	modified:   .travis.yml
	modified:   CMakeLists.txt
	new file:   Makefile
	modified:   README.md
	modified:   bin/project.sh
	modified:   docs/CMakeLists.txt
	modified:   src/CMakeLists.txt

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,19 +17,19 @@ install:
  - sudo pip install cpp-coveralls
 
 before_script:
- - ./bin/project.sh
+ - make setup
 
 script:
- - cd ./build/debug/
- - make parser
- - make test
+ - make docs
+ - make debug
+ - make release
+ - make coverage
+ - make test-debug
+ - make test-release
+ - make test-coverage
 
 after_success:
- - pwd
- - make coverage-report
- - pwd
- - coveralls -i ../../src/ -i ./src -b .src/CMakeFiles/verilogparser.dir/ 
-
+ - echo "Success"
 
 after_failure:
  - echo "Failure"
