Adding dedicated coverage test.  On branch master  Your branch is ahead of 'origin/master' by 2 commits.    (use "git push" to publish your local commits)
 Changes to be committed:
	modified:   src/CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -103,20 +103,30 @@ target_link_libraries(${EXECUTABLE_NAME} ${LIBRARY_NAME})
 
 # ------------------------------------------------------------------------
 
+if( ${WITH_COVERAGE} )
 
-file(GLOB TEST_FILE_LIST "../tests/*.[vh]")
-
-foreach ( TESTFILE ${TEST_FILE_LIST} )
-
-    add_test(NAME verilog_parser_${TESTFILE}
-             COMMAND parser ${TESTFILE}
+    file(GLOB TEST_FILE_LIST "../tests/*.[vh]")
+        
+    add_test(NAME verilog_parser_coverage
+             COMMAND parser ${TEST_FILE_LIST}
              WORKING_DIRECTORY ../
     )
 
-endforeach ( TESTFILE )
+else ()
 
+    file(GLOB TEST_FILE_LIST "../tests/*.[vh]")
 
-# ------------------------------------------------------------------------
+    foreach ( TESTFILE ${TEST_FILE_LIST} )
+
+        add_test(NAME verilog_parser_${TESTFILE}
+                 COMMAND parser ${TESTFILE}
+                 WORKING_DIRECTORY ../
+        )
+
+    endforeach ( TESTFILE )
+
+endif()
+
 
 #file(GLOB COVERAGE_TEST_FILE_LIST "../tests/*.v")
 #
