Adding lcov and gcov support. Hopefully coveralls.io support to travis too.  On branch master  Your branch is ahead of 'origin/master' by 3 commits.    (use "git push" to publish your local commits)
 Changes to be committed:
	modified:   .travis.yml
	modified:   Makefile
	modified:   src/CMakeLists.txt

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ script:
 
 after_success:
  - echo "Success"
+ - coveralls --verbose --gcov-options "-abcf" -b ./build/coverage/src/CMakeFiles/verilogparser.dir/
 
 after_failure:
  - echo "Failure"
