--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -105,6 +105,8 @@ target_link_libraries(${EXECUTABLE_NAME} ${LIBRARY_NAME})
 
 if( ${WITH_COVERAGE} )
 
+    set(CMAKE_C_OUTPUT_EXTENSION_REPLACE 1)
+
     file(GLOB TEST_FILE_LIST "../tests/*.[vh]")
         
     add_test(NAME verilog_parser_coverage
@@ -127,31 +129,3 @@ else ()
 
 endif()
 
-
-#file(GLOB COVERAGE_TEST_FILE_LIST "../tests/*.v")
-#
-#file(GLOB COVERAGE_SRC_FILES "./*.c")
-#
-#set(COVERAGE_GEN_FILES 
-#    ${BINARY_DIR}/${FLEX_OUTPUT} ${BINARY_DIR}/${BISON_OUTPUT}
-#)
-#
-#add_custom_target(coverage-tests
-#    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/parser ${COVERAGE_TEST_FILE_LIST}
-#    WORKING_DIRECTORY ../
-#    DEPENDS ${EXECUTABLE_NAME}
-#    COMMENT "Running Coverage Tests"
-#    VERBATIM
-#)
-#
-## -s ../../src/*.c ./src/*.c
-#
-#add_custom_target(coverage-report
-#    COMMAND gcov -f -b -c -o ../../build/debug/src/CMakeFiles/verilogparser.dir -s ${COVERAGE_SRC_FILES} ${COVERAGE_GEN_FILES}
-#    COMMAND lcov --directory . -c -o coverage.info -t "Verilog Parser"
-#    COMMAND genhtml -o ./coverage -t "Verilog Parser Test Coverage" --num-spaces 4 coverage.info
-#    DEPENDS coverage-tests
-#    COMMENT "Generating Coverage Report With GCOV"
-#    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../
-#    VERBATIM
-#)
