Enable disabling of library tests from projects which use it.  On branch master  Your branch is up-to-date with 'origin/master'.
 Changes to be committed:
	modified:   src/CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -103,29 +103,32 @@ target_link_libraries(${EXECUTABLE_NAME} ${LIBRARY_NAME})
 
 # ------------------------------------------------------------------------
 
-if( ${WITH_COVERAGE} )
-
-    set(CMAKE_C_OUTPUT_EXTENSION_REPLACE 1)
-
-    file(GLOB TEST_FILE_LIST "../tests/*.[vh]")
-        
-    add_test(NAME verilog_parser_coverage
-             COMMAND parser ${TEST_FILE_LIST}
-             WORKING_DIRECTORY ../
-    )
+if( ${DISABLE_VERILOG_PARSER_TESTS} )
 
 else ()
+    if( ${WITH_COVERAGE} )
 
-    file(GLOB TEST_FILE_LIST "../tests/*.[vh]")
+        set(CMAKE_C_OUTPUT_EXTENSION_REPLACE 1)
 
-    foreach ( TESTFILE ${TEST_FILE_LIST} )
-
-        add_test(NAME verilog_parser_${TESTFILE}
-                 COMMAND parser ${TESTFILE}
+        file(GLOB TEST_FILE_LIST "../tests/*.[vh]")
+            
+        add_test(NAME verilog_parser_coverage
+                 COMMAND parser ${TEST_FILE_LIST}
                  WORKING_DIRECTORY ../
         )
 
-    endforeach ( TESTFILE )
+    else ()
 
-endif()
+        file(GLOB TEST_FILE_LIST "../tests/*.[vh]")
 
+        foreach ( TESTFILE ${TEST_FILE_LIST} )
+
+            add_test(NAME verilog_parser_${TESTFILE}
+                     COMMAND parser ${TESTFILE}
+                     WORKING_DIRECTORY ../
+            )
+
+        endforeach ( TESTFILE )
+
+    endif()
+endif ()
