--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq flex build-essential lcov
  - wget http://mirrors.kernel.org/ubuntu/pool/main/b/bison/bison_3.0.4.dfsg-1_amd64.deb
- - wget http://ftp.us.debian.org/debian/pool/main/b/bison/libbison-dev_3.0.4.dfsg-1_amd64.deb
- - sudo dpkg -i libbison-dev_3.0.4.dfsg-1_amd64.deb
+ - wget http://ftp.us.debian.org/debian/pool/main/b/bison/libbison-dev_3.0.4.dfsg-1+b1_amd64.deb
+ - sudo dpkg -i libbison-dev_3.0.4.dfsg-1+b1_amd64.deb
  - sudo dpkg -i bison_3.0.4.dfsg-1_amd64.deb
  - sudo pip install cpp-coveralls
 
